<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/Nombre"
            android:layout_weight="0.6"
 />

        <EditText
            android:id="@+id/textoNombUse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:layout_weight="0.4"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/Contrasena"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/textoContrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:ems="10"
            android:inputType="textPassword"
            android:text="" />


    </LinearLayout>

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/REGISTRAR" />

    <Button
        android:id="@+id/botonAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ACCEDER" />

    <TextView
        android:id="@+id/textAccesoUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text=""
        android:layout_weight="0.1"/>

    <Button
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU" />



</LinearLayout>