<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">

    <TextView
        android:id="@+id/tituloVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/espacio" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/siGusta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Gracioso"
        android:background="#01DF01"
        android:textColor="#ffffff"
        />
    <Button
        android:id="@+id/noGusta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/No_Gracioso"
        android:background="#ff0000"
        android:textColor="#ffffff"
        />


</LinearLayout>