<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/titulo"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/tituloVideoAnadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/URL"
            android:layout_weight="0.7"
            />

        <EditText
            android:id="@+id/textoURLAnadir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:layout_weight="0.3"/>


    </LinearLayout>

    <Button
        android:id="@+id/botonNuevoVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anadir" />

    <TextView
        android:id="@+id/textNuevoVideo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text=""
        android:layout_weight="0.1"/>

    <Button
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MENU" />



</LinearLayout>