<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tituloElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TITULO"
        android:textAlignment="center"
        android:textSize="25sp"/>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:id="@+id/imagenElemento"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_height="75dp"
            android:layout_width="75dp"
            />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Votos_positivos" />
                <TextView
                    android:id="@+id/positivosUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/espacio" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barraDiagonal" />
                <TextView
                    android:id="@+id/positivosTotales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/espacio" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Votos_totales" />
                <TextView
                    android:id="@+id/totalesUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/espacio" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barraDiagonal" />
                <TextView
                    android:id="@+id/totalesVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/espacio" />
            </LinearLayout>
        </LinearLayout>
</LinearLayout></LinearLayout>